wave contrast issues fixed

--- a/lesson4/chamber/styles/chamber.css
+++ b/lesson4/chamber/styles/chamber.css
@@ -180,11 +180,11 @@ main section h2 {
 }
 
 #hero-banner a {
-    background-color: #497a10;
+    background-color: #7BC950;
     color:black;
     text-decoration: none;
     position: absolute;
-    box-shadow: 3px 3px 3px grey;
+    box-shadow: 3px 3px 3px #000080;
     padding: 3%;
     border-radius: 10px;
     bottom: 15%;
@@ -192,7 +192,7 @@ main section h2 {
 }
 
 #hero-banner a:hover {
-    background-color: #497a10;
+    background-color: #7BC950;
     color: white;
 }
 
